Fixed borders on smaller screens

--- a/assets/stylesheets/stylesheet.css
+++ b/assets/stylesheets/stylesheet.css
@@ -9,7 +9,6 @@ html {
   width: 100vh;
   height: 90vh;
   min-height: 800px;
-  border: 5px solid red;
   text-align: center;
 }
 
@@ -19,6 +18,7 @@ html {
   justify-content: space-between;
   padding-left: 20px;
   padding-right: 20px;
+  border: 5px solid red;
 }
 
 .github {
@@ -44,8 +44,8 @@ html {
   height: 70%;
   display: flex;
   justify-content: space-between;
-  border-top: 2px solid red;
-  border-bottom: 2px solid red;
+  border-left: 5px solid red;
+  border-right: 5px solid red;
 }
 
 .title {
@@ -207,6 +207,7 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
+  border: 5px solid red;
 }
 
 .button-money {
